Fixed a x-overflow bug in menu
Steps to reproduce:
In mobile phone, navigate to blog section and toggle button will not visible.

--- a/docs-assets/css/sunpy.css
+++ b/docs-assets/css/sunpy.css
@@ -4,6 +4,7 @@ body {
 	background-color: #fff;
   font-size: 16px;
   line-height: 24px;
+  word-wrap: break-word;
 }
 
 /* Inverted outline button (white on dark) */
